# deducible

./: .env.example  .gitignore  .solhint.json  CLAUDE.md  ISTIFTA.md  LICENSE  README.md  STATE_OF_ARTIFACT.md  package-lock.json  package.json
agents/: valuer_agent.js
contracts/: AssetTokenCustodian.sol  ConsensusValuationOracle.sol  IValuationOracle.sol  MockValuationOracle.sol  MusharakahMutanaqisah.sol  MusharakahMutanaqisahV2.sol  MusharakahMutanaqisahV3.sol  MusharakahMutanaqisahV4.sol  MusharakahMutanaqisahV5.sol
deployments/: contract_hts_binding.json  generated_musharakah_mutanaqisah.json  stepdown.json  testnet.json  testnet_murabahah.json  testnet_run.json  testnet_v2.json  testnet_v3.json  testnet_v3_dissolve.json  testnet_zakat.json  tokenized_asset.json
fiqh-compiler/: .gitignore  Cargo.toml  ENTERPRISE_VECTORS.md  QAWAID.md  README.md  SPEC.md  lsp_smoke.js
fiqh-compiler/crates/fiqhc-ffi/: Cargo.toml  ffi_smoke.c  wasm_smoke.js
fiqh-compiler/crates/fiqhc-ffi/src/: lib.rs
paper/: algorithmic_jurisprudence.md  beyond_the_bilateral_contract.md  full_paper.md  full_paper_v2.md  full_paper_v3.md  methodology_results.md  paper.md  peer_review.md  peer_review_round2.md  peer_review_round3.md  sections.md  security_static_analysis.md
scripts/: assemble.py  consensus_demo.js  consolidate.py  deploy.js  deploy_generated.js  deploy_murabahah_live.js  deploy_zakat_live.js  diag.js  diag2.js  finalize.py  harden.py  interact.js  interact2.js  interact3.js  interact4.js  interact5.js  interact6.js  interact7.js  interact8.js  mirror.js
(+144 files in other folders)
